--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "yoasearch",
-  "version": "1.0.0",
-  "description": "one click to search common sites",
-  "main": "server.js",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "puppeteer": "^8.0.0",
-    "puppeteer-extra": "^3.1.17"
-  },
-  "devDependencies": {},
+  "name": "yoayoa",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon ./bin/www"
   },
-  "author": "aiyamia",
-  "license": "GPL3.0"
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.7",
+    "puppeteer": "^8.0.0",
+    "puppeteer-extra": "^3.1.18",
+    "puppeteer-extra-plugin-stealth": "^2.7.6"
+  }
 }
