--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yoayoa",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "test": "nodemon ./bin/www",
@@ -13,10 +13,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "puppeteer": "^8.0.0",
-    "puppeteer-extra": "^3.1.18",
-    "puppeteer-extra-plugin-stealth": "^2.7.6"
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
